# boredapi

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  project_structure.txt  pyproject.toml
docker/: Dockerfile  Dockerfile.api  Dockerfile.test  docker-compose.dev.yml  docker-compose.prod.yml  entrypoint.sh  kibana.yml  setup-users.sh  setup_kibana.sh
docker/elasticsearch/: elasticsearch.yml
docker/kibana/dashboards/: content_analysis.debug.json  content_analysis.ndjson  convert.sh  roc_eclerc_dashboard.debug.json  roc_eclerc_dashboard.ndjson  save.ndjson
prompts/: final_prompt.txt  project_structure.txt  prompt1.txt
scripts/: analyze_urls.py  dev.sh  dev_crawler.sh  manage.sh  setup_kibana.sh  test.sh
src/: config.py  test_analyzers.py
src/api/: __init__.py  auth.py  main.py
src/api/routes/: content.py  health.py  migration.py
src/api/services/: search.py
src/api/static/: index.html
src/cli/: crawler_cli.py  ingest_data.py  test_ingest.py
src/contentful/: client.py
src/elasticsearch/: indexer.py  mappings.py  test_indexer.py
src/monitoring/: metrics.py
src/nlp/: embeddings.py  keyword_extraction.py  preprocessor.py  processor.py  test_embeddings.py  test_lemma.py  test_vector_search.py  topic_modeling.py
src/scraper/: crawler.py
src/storage/: elasticsearch.py  postgresql.py
src/utils/: __init__.py  parse_data.py  section_counter.py  web_analysis.py
tests/: test_nlp_processing.py
tests/test_analyzer/: test_analyzers.py
tests/test_contentful/: test_client.py
tests/test_scraper/: test_crawler.py
tests/test_storage/: test_elasticsearch.py
