[tool.poetry]
name = "web-scraping-system"
version = "0.1.0"
description = "Web Content Migration System to Contentful"
authors = ["etienne.vincent@wivoo.fr"]
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "~3.12"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
playwright = "^1.41.0"
elasticsearch = "^8.11.0"
asyncpg = "^0.29.0"
contentful-management = "^2.13.0"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
structlog = "^24.1.0"
prometheus-client = "^0.19.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
aiohttp = "^3.9.1"
pandas = "^2.2.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"
black = "^24.1.0"
isort = "^5.13.0"
mypy = "^1.8.0"
ruff = "^0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
crawl = "src.cli.crawler_cli:main"